--- a/index.html
+++ b/index.html
@@ -2328,6 +2328,7 @@
 	<!------------buy or sell---------->
 
 	<section class="buy">
+		<div class="row center">
 		<div class="details">
 			<h3>Buy or Sell</h3>
 			<p>Looking to Buy a new property or sell an existing one?</p>
@@ -2336,6 +2337,7 @@
 				<a href="#" class="btn_1">Submit Propertiy</a>
 				<a href="#" class="btn_2">Browse Properties</a>
 			</div>
+		</div>
 		</div>
 	</section>
 
@@ -2397,6 +2399,8 @@
 	<!------------about---------->
 
 <section class="about">
+	<div class="row center">
+	<div class="content">
 	<div class="about_box">
 	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>	
 	</div>
@@ -2410,6 +2414,8 @@
 	<div class="name">
 		<h2>Zaid</h2>
 		<p>Designer Manager</p>
+	</div>
+	</div>
 	</div>
 </section>
 
